Fix dark mode for Dashboard Panel bottom (phui-oi-tail)
Summary:
Drop the useless gradient; add border-top to visually separate from last listed item.

See T15056#12892

Test Plan:
1. Set up a query panel and/or feed panel on the dashboard shown on the frontpage
2. Go http://phorge.localhost/settings/panel/display/ and set `Accessibility` to `Dark Mode (Experimental)`
3. Look at the bottoms of panels where a "View All Results" button is rendered

Reviewers: O1 Blessed Committers, mainframe98

Reviewed By: O1 Blessed Committers, mainframe98

Subscribers: mainframe98, tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26128

--- a/webroot/rsrc/css/phui/object-item/phui-oi-list-view.css
+++ b/webroot/rsrc/css/phui/object-item/phui-oi-list-view.css
@@ -722,7 +722,7 @@ ul.phui-oi-list-view .phui-oi-selectable
 .phui-oi-tail {
   text-align: center;
   padding: 8px 0;
-  background: linear-gradient({$lightbluebackground}, #fff 66%, #fff);
+  border-top: 1px solid {$thinblueborder};
 }
 
 .phui-oi-menu {
